fix time-area overflow on firefox

--- a/src/renderer/timeline/styles.css
+++ b/src/renderer/timeline/styles.css
@@ -12,6 +12,10 @@
   }
 }
 
+.timeline-editor-time-area .ReactVirtualized__Grid {
+  overflow: hidden !important;
+}
+
 .timeline-editor-cursor {
   border-color: var(--accent) !important;
 }
